chore(refacto): operation type as enum